--- a/apps/omega/tsconfig.web.json
+++ b/apps/omega/tsconfig.web.json
@@ -2,11 +2,11 @@
   "extends": ["@electron-toolkit/tsconfig/tsconfig.web.json", "./tsconfig.base.json"],
   "include": [
     "src/renderer/src/env.d.ts",
-    "src/renderer/src/**/*",
+    "src/renderer/src/**/*.ts",
     "src/renderer/src/**/*.tsx",
+
     "src/main/ipcRoutes/index.ts",
     "src/preload/*.d.ts",
-    "src/enrdor/**/*"
   ],
   "compilerOptions": {
     "composite": true,
