--- a/packages/agent-infra/mcp-servers/browser/package.json
+++ b/packages/agent-infra/mcp-servers/browser/package.json
@@ -17,7 +17,7 @@
   ],
   "scripts": {
     "build": "rm -rf dist && rslib build && shx chmod +x dist/*.{js,cjs}",
-    "dev": "npx -y @modelcontextprotocol/inspector tsx index.ts",
+    "dev": "npx -y @modelcontextprotocol/inspector tsx src/index.ts",
     "prepare": "npm run build",
     "watch": "rslib build --watch"
   },
