--- a/apps/omega/package.json
+++ b/apps/omega/package.json
@@ -13,6 +13,7 @@
     "asar:analyze": "asar extract out/Agent\\ TARS-darwin-arm64/Agent\\ TARS.app/Contents/Resources/app.asar ./dist/asar",
     "start": "electron-vite preview",
     "dev": "electron-vite dev",
+    "prepare": "npm run build:reporter",
     "package": "electron-forge package",
     "build": "rimraf dist out && npm run typecheck && npm run build:reporter && electron-vite build && electron-forge make",
     "test": "vitest run",
