fix(ci): turborepo prepare outputs dir (#217)

--- a/turbo.json
+++ b/turbo.json
@@ -3,22 +3,25 @@
   "envMode": "loose",
   "tasks": {
     "//#bootstrap": {
+      "dependsOn": [
+        "^prepare"
+      ],
       "outputs": [
-        "build/**",
-        "dist/**",
-        "out/**"
+        "**/build/**",
+        "**/dist/**",
+        "**/out/**"
       ]
     },
     "ui-tars-desktop#build": {
       "outputs": [
-        "dist/**",
-        "out/**"
+        "apps/ui-tars-desktop/dist/**",
+        "apps/ui-tars-desktop/out/**"
       ]
     },
     "ui-tars-desktop#build:e2e": {
       "outputs": [
-        "out/**",
-        "dist/**"
+        "apps/ui-tars-desktop/out/**",
+        "apps/ui-tars-desktop/dist/**"
       ]
     },
     "ui-tars-desktop#test:e2e": {
@@ -28,8 +31,8 @@
     },
     "agent-tars-app#build": {
       "outputs": [
-        "dist/**",
-        "out/**"
+        "apps/omega/dist/**",
+        "apps/omega/out/**"
       ]
     },
     "//#format": {},
@@ -38,6 +41,11 @@
     "//#coverage": {
       "outputs": [
         "coverage/**/*"
+      ]
+    },
+    "prepare": {
+      "dependsOn": [
+        "^prepare"
       ]
     },
     "typecheck": {},
