--- a/.github/workflows/agent-tars-website.yml
+++ b/.github/workflows/agent-tars-website.yml
@@ -38,24 +38,11 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '20'
+          cache: 'pnpm'
 
-      - name: Setup PNPM
-        uses: pnpm/action-setup@v3
-        with:
-          version: '9.10.0'
-
-      - name: Get pnpm store directory
-        shell: bash
+      - name: Install PNPM
         run: |
-          echo "STORE_PATH=$(pnpm store path --silent)" >> $GITHUB_ENV
-
-      - name: Setup pnpm cache
-        uses: actions/cache@v4
-        with:
-          path: ${{ env.STORE_PATH }}
-          key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
-          restore-keys: |
-            ${{ runner.os }}-pnpm-store-
+          npm install -g pnpm@9.10.0
 
       - name: Install dependencies (website only)
         run: |
