feat: display session

--- a/apps/agent-tars/src/renderer/package.json
+++ b/apps/agent-tars/src/renderer/package.json
@@ -6,7 +6,7 @@
     "react-dom": "^18.3.1",
     "@nextui-org/react": "2.4.8",
     "framer-motion": "11.2.13",
-    "styled-components": "^6.1.11",
+    "styled-components": "6.1.11",
     "localforage": "^1.10.0",
     "jotai": "^2.8.2",
     "react-icons": "5.2.1",
