--- a/packages/agent-infra/search/search/package.json
+++ b/packages/agent-infra/search/search/package.json
@@ -30,6 +30,7 @@
     "@tavily/core": "0.3.1",
     "@agent-infra/browser-search": "workspace:*",
     "@agent-infra/bing-search": "workspace:*",
+    "@agent-infra/duckduckgo-search": "workspace:*",
     "@agent-infra/logger": "workspace:*"
   },
   "devDependencies": {
