fix: bundle bug & browser click flash (#237)

--- a/apps/agent-tars/package.json
+++ b/apps/agent-tars/package.json
@@ -38,10 +38,10 @@
     }
   },
   "dependencies": {
+    "@tavily/core": "0.3.1",
     "@agent-infra/mcp-server-commands": "workspace:*",
     "@agent-infra/mcp-server-filesystem": "workspace:*",
-    "@agent-infra/mcp-server-browser": "workspace:*",
-    "@tavily/core": "0.3.1"
+    "@agent-infra/mcp-server-browser": "workspace:*"
   },
   "devDependencies": {
     "@modelcontextprotocol/sdk": "^1.7.0",
