--- a/apps/agent-tars/package.json
+++ b/apps/agent-tars/package.json
@@ -44,6 +44,7 @@
     "@agent-infra/mcp-server-browser": "workspace:*"
   },
   "devDependencies": {
+    "serialize-javascript": "6.0.2",
     "@modelcontextprotocol/sdk": "^1.7.0",
     "@electron-toolkit/preload": "^3.0.1",
     "@electron-toolkit/utils": "^4.0.0",
