--- a/apps/agent-tars/package.json
+++ b/apps/agent-tars/package.json
@@ -39,6 +39,7 @@
   },
   "dependencies": {
     "@tavily/core": "0.3.1",
+    "@computer-use/node-mac-permissions": "2.2.2",
     "@agent-infra/mcp-server-commands": "workspace:*",
     "@agent-infra/mcp-server-filesystem": "workspace:*",
     "@agent-infra/mcp-server-browser": "workspace:*"
