--- a/apps/agent-tars/tsconfig.web.json
+++ b/apps/agent-tars/tsconfig.web.json
@@ -6,6 +6,7 @@
     "src/renderer/src/**/*.tsx",
 
     "src/main/ipcRoutes/index.ts",
+    "src/main/utils/errorReporter.ts",
     "src/preload/*.d.ts",
   ],
   "compilerOptions": {
