feat(agent-tars): local browser search (close: #333)
chore: add comments

chore: fix type error

chore(search): add logger

fix(browser-search): wrong filter

fix(search): browser search does not work

feat: local browser search (close: #333)

refactor: search related types

--- a/packages/agent-infra/search/search/package.json
+++ b/packages/agent-infra/search/search/package.json
@@ -31,7 +31,8 @@
     "@agent-infra/browser-search": "workspace:*",
     "@agent-infra/bing-search": "workspace:*",
     "@agent-infra/duckduckgo-search": "workspace:*",
-    "@agent-infra/logger": "workspace:*"
+    "@agent-infra/logger": "workspace:*",
+    "@agent-infra/shared": "workspace:*"
   },
   "devDependencies": {
     "@agent-infra/browser": "workspace:*",
