--- a/apps/agent-tars/package.json
+++ b/apps/agent-tars/package.json
@@ -17,6 +17,9 @@
     "package": "electron-forge package",
     "build": "rimraf dist out && npm run typecheck && npm run build:reporter && electron-vite build && electron-forge make",
     "test": "vitest run",
+    "build:dist": "cross-env NODE_ENV=production electron-vite build",
+    "build:e2e": "npm run build:dist && cross-env CI=e2e npm run package",
+    "test:e2e": "playwright test",
     "publish:mac": "npm run build:reporter && electron-vite build && electron-forge publish --arch=universal --platform=darwin",
     "dev:reporter": "vite dev",
     "build:reporter": "vite build"
@@ -80,6 +83,9 @@
     "@types/node": "^22.13.4",
     "@types/fs-extra": "11.0.4",
     "@vitejs/plugin-react": "^4.3.4",
+    "@playwright/test": "^1.49.1",
+    "cross-env": "^7.0.3",
+    "electron-playwright-helpers": "^1.7.1",
     "rimraf": "^6.0.1",
     "autoprefixer": "10.4.20",
     "electron": "34.1.1",
