--- a/packages/agent-infra/mcp-servers/browser/package.json
+++ b/packages/agent-infra/mcp-servers/browser/package.json
@@ -25,6 +25,7 @@
     "@modelcontextprotocol/sdk": "^1.6.1"
   },
   "devDependencies": {
+    "@agent-infra/logger": "workspace:*",
     "@ghostery/adblocker-puppeteer": "2.5.0",
     "cross-fetch": "4.1.0",
     "@rslib/core": "0.5.3",
