--- a/turbo.json
+++ b/turbo.json
@@ -29,6 +29,17 @@
         "ui-tars-desktop#build:e2e"
       ]
     },
+    "agent-tars-app#build:e2e": {
+      "outputs": [
+        "apps/agent-tars/out/**",
+        "apps/agent-tars/dist/**"
+      ]
+    },
+    "agent-tars-app#test:e2e": {
+      "dependsOn": [
+        "agent-tars-app#build:e2e"
+      ]
+    },
     "agent-tars-app#build": {
       "outputs": [
         "apps/agent-tars/dist/**",
