fix(build-script): windows exec pnpm run build error (#369)
Co-authored-by: Charles <chaolinjin@gmail.com>
Co-authored-by: Charles <jinxin001@bytedance.com>

--- a/packages/agent-infra/mcp-servers/commands/package.json
+++ b/packages/agent-infra/mcp-servers/commands/package.json
@@ -13,8 +13,8 @@
     "dist"
   ],
   "scripts": {
-    "clean": "rm -rf build",
-    "build": "rm -rf build && rslib build && shx chmod +x dist/*.{js,cjs}",
+    "clean": "shx rm -rf build",
+    "build": "shx rm -rf build && rslib build && shx chmod +x dist/*.{js,cjs}",
     "prepare": "npm run build",
     "watch": "npm run build && rslib build --watch",
     "dev": "npx -y @modelcontextprotocol/inspector tsx src/index.ts",
