--- a/packages/agent-infra/mcp-servers/browser/package.json
+++ b/packages/agent-infra/mcp-servers/browser/package.json
@@ -16,7 +16,7 @@
     "dist"
   ],
   "scripts": {
-    "build": "rm -rf dist && rslib build && shx chmod +x dist/*.{js,cjs}",
+    "build": "shx rm -rf dist && rslib build && shx chmod +x dist/*.{js,cjs}",
     "dev": "npx -y @modelcontextprotocol/inspector tsx src/index.ts",
     "prepare": "npm run build",
     "watch": "rslib build --watch"
