--- a/packages/agent-infra/mcp-servers/filesystem/package.json
+++ b/packages/agent-infra/mcp-servers/filesystem/package.json
@@ -14,7 +14,7 @@
     "dist"
   ],
   "scripts": {
-    "build": "rm -rf dist && rslib build && shx chmod +x dist/*.js",
+    "build": "shx rm -rf dist && rslib build && shx chmod +x dist/*.js",
     "dev": "npx -y @modelcontextprotocol/inspector tsx src/index.ts",
     "prepare": "npm run build",
     "watch": "rslib build --watch"
