feat(ui-tars): add ui-tars adb operator for cli (#164)
Co-authored-by: ycjcl868 <chaolinjin@gmail.com>
Co-authored-by: ycjcl868 <jinxin001@BYTEDANCE.COM>

--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -15,6 +15,10 @@
   "ignore": [
     "ui-tars-desktop",
     "ui-tars-desktop-renderer",
-    "@common/*"
+    "agent-tars-app",
+    "agent-tars-app-renderer",
+    "@common/*",
+    "@agent-infra/*",
+    "!@agent-infra/logger"
   ]
 }
