--- a/apps/agent-tars/src/renderer/package.json
+++ b/apps/agent-tars/src/renderer/package.json
@@ -1,5 +1,7 @@
 {
-  "name": "open-agent-renderer",
+  "name": "agent-tars-app-renderer",
+  "private": true,
+  "version": "0.0.1",
   "dependencies": {
     "@ui-tars/electron-ipc": "workspace:*",
     "react": "^18.3.1",
