chore(ui-tars): update cli README to show adb operator demo (#401)
Co-authored-by: ycjcl868 <jinxin001@BYTEDANCE.COM>

--- a/packages/ui-tars/operators/adb/package.json
+++ b/packages/ui-tars/operators/adb/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ui-tars/operator-adb",
-  "version": "1.2.0-beta.22",
+  "version": "1.2.0-beta.24",
   "description": "Operator Android SDK for UI-TARS",
   "repository": {
     "type": "git",
@@ -20,9 +20,10 @@
   "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
   "scripts": {
-    "dev": "tsup --watch",
+    "dev": "rslib build --watch",
+    "build": "rslib build",
+    "build:watch": "rslib build --watch",
     "prepare": "npm run build",
-    "build": "tsup",
     "test": "vitest"
   },
   "license": "Apache-2.0",
@@ -41,7 +42,8 @@
   },
   "devDependencies": {
     "@ui-tars/sdk": "workspace:*",
-    "tsup": "^8.3.5",
+    "@common/configs": "workspace:*",
+    "@rslib/core": "^0.5.4",
     "typescript": "^5.7.2",
     "vitest": "^3.0.2",
     "@types/big.js": "^6.2.2",
