feat(agent-tars): add mcp servers settings (close:#280) (#415)
This commit support MCP servers setting to integrate with a wide range of real-world tools.

Close:#280
Close:#334

--- a/apps/agent-tars/package.json
+++ b/apps/agent-tars/package.json
@@ -57,6 +57,7 @@
     "electron-updater": "^6.3.9",
     "openai": "^4.86.2",
     "dotenv": "16.4.7",
+    "@agent-infra/mcp-shared": "workspace:*",
     "@agent-infra/shared": "workspace:*",
     "@agent-infra/logger": "workspace:*",
     "@agent-infra/mcp-client": "workspace:*",
