--- a/apps/agent-tars/src/renderer/package.json
+++ b/apps/agent-tars/src/renderer/package.json
@@ -7,16 +7,19 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "@nextui-org/react": "2.4.8",
+    "@nextui-org/form": "2.1.8",
     "framer-motion": "11.2.13",
     "styled-components": "6.1.11",
     "localforage": "^1.10.0",
+    "swr": "^2.3.3",
     "jotai": "^2.8.2",
     "react-icons": "5.2.1",
     "lucide-react": "0.479.0",
     "classnames": "2.5.1",
     "jszip": "3.10.1",
-    "@nextui-org/system": "2.2.6",
-    "@nextui-org/theme": "2.2.11",
+    "@nextui-org/system": "2.4.6",
+    "@nextui-org/theme": "2.4.5",
+    "@agent-infra/mcp-shared": "workspace:*",
     "@agent-infra/shared": "workspace:*",
     "clsx": "2.1.1",
     "tailwind-merge": "3.0.2",
