feat: update adb operator with appium-adb

--- a/packages/ui-tars/operators/adb/package.json
+++ b/packages/ui-tars/operators/adb/package.json
@@ -38,7 +38,8 @@
     "@ui-tars/shared": "workspace:*",
     "execa": "5.0.1",
     "inquirer": "8.2.4",
-    "jimp": "1.6.0"
+    "jimp": "1.6.0",
+    "appium-adb": "12.12.1"
   },
   "devDependencies": {
     "@ui-tars/sdk": "workspace:*",
