--- a/apps/agent-tars/tsconfig.web.json
+++ b/apps/agent-tars/tsconfig.web.json
@@ -7,6 +7,7 @@
 
     "src/main/ipcRoutes/index.ts",
     "src/main/utils/errorReporter.ts",
+    "src/main/agent/agent-type.ts",
     "src/preload/*.d.ts",
   ],
   "compilerOptions": {
