--- a/apps/agent-tars/src/renderer/package.json
+++ b/apps/agent-tars/src/renderer/package.json
@@ -4,10 +4,10 @@
   "version": "0.0.1",
   "dependencies": {
     "@ui-tars/electron-ipc": "workspace:*",
+    "react-hook-form": "7.46.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "@nextui-org/react": "2.4.8",
-    "@nextui-org/form": "2.1.8",
     "framer-motion": "11.2.13",
     "styled-components": "6.1.11",
     "localforage": "^1.10.0",
