fix(ui-tars): actionInputs be null when coordinates has value 0 (clos… (#449)
Co-authored-by: Charles <jinxin001@bytedance.com>

--- a/packages/ui-tars/action-parser/package.json
+++ b/packages/ui-tars/action-parser/package.json
@@ -34,10 +34,12 @@
     "registry": "https://registry.npmjs.org"
   },
   "dependencies": {
-    "@ui-tars/shared": "workspace:*"
+    "@ui-tars/shared": "workspace:*",
+    "lodash.isnumber": "3.0.3"
   },
   "devDependencies": {
     "@rslib/core": "^0.5.4",
+    "@types/lodash.isnumber": "3.0.3",
     "@common/configs": "workspace:*",
     "typescript": "^5.7.2",
     "vitest": "^3.0.2"
