feat: init shadcn ui

--- a/apps/ui-tars/tsconfig.base.json
+++ b/apps/ui-tars/tsconfig.base.json
@@ -3,6 +3,7 @@
     "baseUrl": ".",
     "moduleResolution": "bundler",
     "paths": {
+      "@/*": ["./src/*"],
       "@shared/*": ["./src/shared/*"],
       "@main/*": ["./src/main/*"],
       "@renderer/*": ["./src/renderer/src/*"],
