--- a/apps/ui-tars/src/renderer/package.json
+++ b/apps/ui-tars/src/renderer/package.json
@@ -7,7 +7,13 @@
     "@chakra-ui/theme-tools": "^2.2.6",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
+    "@radix-ui/react-avatar": "^1.1.4",
+    "@radix-ui/react-collapsible": "^1.1.4",
+    "@radix-ui/react-dialog": "^1.1.7",
+    "@radix-ui/react-dropdown-menu": "^2.1.7",
+    "@radix-ui/react-separator": "^1.1.3",
     "@radix-ui/react-slot": "^1.2.0",
+    "@radix-ui/react-tooltip": "^1.2.0",
     "class-variance-authority": "0.7.1",
     "clsx": "2.1.1",
     "copy-to-clipboard": "3.3.3",
