--- a/apps/ui-tars/src/renderer/package.json
+++ b/apps/ui-tars/src/renderer/package.json
@@ -14,6 +14,8 @@
     "@radix-ui/react-dialog": "^1.1.7",
     "@radix-ui/react-dropdown-menu": "^2.1.7",
     "@radix-ui/react-label": "^2.1.3",
+    "@radix-ui/react-scroll-area": "^1.2.4",
+    "@radix-ui/react-select": "^2.1.7",
     "@radix-ui/react-separator": "^1.1.3",
     "@radix-ui/react-slot": "^1.2.0",
     "@radix-ui/react-switch": "^1.1.4",
@@ -43,7 +45,7 @@
     "tailwind-merge": "3.1.0",
     "tw-animate-css": "1.2.5",
     "uuid": "11.1.0",
-    "zod": "^3.23.8",
+    "zod": "^3.24.2",
     "zustand": "^5.0.0"
   },
   "devDependencies": {
