--- a/apps/ui-tars/src/renderer/package.json
+++ b/apps/ui-tars/src/renderer/package.json
@@ -35,8 +35,8 @@
     "ms": "^2.1.3",
     "next-themes": "^0.4.6",
     "qs": "6.13.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
     "react-hook-form": "7.46.1",
     "react-icons": "^5.3.0",
     "react-router": "^7.1.1",
@@ -50,8 +50,8 @@
     "zustand": "^5.0.0"
   },
   "devDependencies": {
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
+    "@types/react": "19.1.2",
+    "@types/react-dom": "19.1.1",
     "electron": "34.1.1"
   }
 }
