--- a/apps/ui-tars/package.json
+++ b/apps/ui-tars/package.json
@@ -35,6 +35,18 @@
     "publish:win32-arm64": "npm run build && electron-forge publish --arch=arm64 --platform=win32",
     "publish": "npm run build && electron-forge publish"
   },
+  "build": {
+    "publish": [
+      {
+        "provider": "github",
+        "owner": "bytedance",
+        "repo": "UI-TARS-desktop"
+      }
+    ],
+    "electronDownload": {
+      "mirror": "https://npmmirror.com/mirrors/electron/"
+    }
+  },
   "peerDependencies": {
     "esbuild-register": "*",
     "ts-node": "*",
@@ -74,7 +86,7 @@
     "electron-store": "^10.0.0",
     "js-yaml": "^4.1.0",
     "ms": "^2.1.3",
-    "update-electron-app": "^3.1.0",
+    "electron-updater": "^6.3.9",
     "zustand": "^5.0.0",
     "@electron-forge/plugin-base": "^7.7.0",
     "@electron-forge/shared-types": "^7.7.0",
