docs(ui-tars): update name for VLM (#517)

--- a/examples/presets/default.yaml
+++ b/examples/presets/default.yaml
@@ -1,6 +1,6 @@
 name: UI TARS Desktop Example Preset
 language: en
-vlmProvider: OpenAI compatible for UI-TARS-1.5
+vlmProvider: Hugging Face for UI-TARS-1.5
 vlmBaseUrl: https://your-endpoint.huggingface.cloud/v1
 vlmApiKey: your_api_key
 vlmModelName: your_model_name
