--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -19,6 +19,7 @@
     "agent-tars-app-renderer",
     "@common/*",
     "@agent-infra/*",
-    "!@agent-infra/logger"
+    "!@agent-infra/logger",
+    "!@agent-infra/browser"
   ]
 }
