--- a/packages/ui-tars/action-parser/package.json
+++ b/packages/ui-tars/action-parser/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ui-tars/action-parser",
-  "version": "1.2.0-beta.24",
+  "version": "1.2.0",
   "description": "Action parser SDK for UI-TARS",
   "repository": {
     "type": "git",
