--- a/packages/ui-tars/operators/browser-operator/package.json
+++ b/packages/ui-tars/operators/browser-operator/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@ui-tars/operator-browser",
   "description": "Native-browser operator for UI-TARS",
-  "version": "1.2.0-beta.24",
+  "version": "1.2.0",
   "repository": {
     "type": "git",
     "url": "https://github.com/bytedance/UI-TARS-desktop"
