--- a/packages/ui-tars/operators/nut-js/package.json
+++ b/packages/ui-tars/operators/nut-js/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ui-tars/operator-nut-js",
-  "version": "1.2.0-beta.24",
+  "version": "1.2.0",
   "description": "Operator Nut JS SDK for UI-TARS",
   "repository": {
     "type": "git",
