--- a/packages/ui-tars/sdk/package.json
+++ b/packages/ui-tars/sdk/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ui-tars/sdk",
-  "version": "1.2.0-beta.24",
+  "version": "1.2.0",
   "description": "A powerful cross-platform(ANY device/platform) toolkit for building GUI automation agents for UI-TARS",
   "repository": {
     "type": "git",
