--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -21,6 +21,7 @@
     "@agent-infra/*",
     "!@agent-infra/logger",
     "!@agent-infra/browser",
-    "!@agent-infra/shared"
+    "!@agent-infra/shared",
+    "!@agent-infra/mcp-client"
   ]
 }
