--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -22,6 +22,7 @@
     "!@agent-infra/logger",
     "!@agent-infra/browser",
     "!@agent-infra/shared",
-    "!@agent-infra/mcp-client"
+    "!@agent-infra/mcp-client",
+    "!@agent-infra/mcp-shared"
   ]
 }
