--- a/packages/agent-infra/browser/package.json
+++ b/packages/agent-infra/browser/package.json
@@ -28,10 +28,13 @@
   },
   "dependencies": {
     "puppeteer-core": "24.1.1",
+    "which": "5.0.0",
+    "edge-paths": "3.0.5",
     "@agent-infra/logger": "workspace:*",
     "@agent-infra/shared": "workspace:*"
   },
   "devDependencies": {
+    "@types/which": "3.0.4",
     "@types/node": "20.14.8",
     "typescript": "^5.7.3",
     "vitest": "3.0.7",
