chore: remove ignore

--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -17,12 +17,6 @@
     "ui-tars-desktop-renderer",
     "agent-tars-app",
     "agent-tars-app-renderer",
-    "@common/*",
-    "@agent-infra/*",
-    "!@agent-infra/logger",
-    "!@agent-infra/browser",
-    "!@agent-infra/shared",
-    "!@agent-infra/mcp-client",
-    "!@agent-infra/mcp-shared"
+    "@common/*"
   ]
 }
