--- a/packages/agent-infra/search/search/package.json
+++ b/packages/agent-infra/search/search/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@agent-infra/search",
   "description": "Isomorphic search client",
-  "version": "0.0.1",
+  "version": "0.0.2-beta.0",
   "main": "dist/index.js",
   "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
