--- a/packages/multimodal/llm/package.json
+++ b/packages/multimodal/llm/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@agent-infra/llm",
+  "name": "@multimodal/llm",
   "version": "0.1.0",
   "description": "A TypeScript SDK to call multiple LLM Prividers in OpenAI format.",
   "main": "dist/index.js",
@@ -22,12 +22,13 @@
     "prepublishOnly": "pnpm run build"
   },
   "dependencies": {
+    "token.js": "0.5.4"
+  },
+  "devDependencies": {
     "@anthropic-ai/sdk": "0.39.0",
     "@google/generative-ai": "0.24.0",
     "@google/genai": "0.8.0",
-    "openai": "4.93.0"
-  },
-  "devDependencies": {
+    "openai": "4.93.0",
     "@types/node": "^20.10.4",
     "typescript": "^5.5.3"
   }
