--- a/packages/multimodal/agent/package.json
+++ b/packages/multimodal/agent/package.json
@@ -22,13 +22,13 @@
     "prepublishOnly": "pnpm run build"
   },
   "dependencies": {
-    "token.js": "0.5.4",
     "zod-to-json-schema": "3.24.3",
     "openai": "4.87.3",
     "zod": "3.24.2",
     "@modelcontextprotocol/sdk": "^1.10.2",
     "@types/json-schema": "^7.0.15",
-    "@agent-infra/mcp-client": "workspace:*"
+    "@agent-infra/mcp-client": "workspace:*",
+    "@multimodal/llm-client": "workspace:*"
   },
   "devDependencies": {
     "@rslib/core": "0.5.3",
