--- a/packages/multimodal/agent/package.json
+++ b/packages/multimodal/agent/package.json
@@ -40,6 +40,7 @@
     "@modelcontextprotocol/sdk": "^1.10.2",
     "@types/json-schema": "^7.0.15",
     "@agent-infra/mcp-client": "workspace:*",
+    "@agent-infra/logger": "workspace:*",
     "@multimodal/llm-client": "workspace:*"
   },
   "devDependencies": {
