--- a/packages/multimodal/agent-tars/package.json
+++ b/packages/multimodal/agent-tars/package.json
@@ -10,7 +10,14 @@
       "import": "./dist/index.mjs",
       "require": "./dist/index.js",
       "types": "./dist/index.d.ts"
+    },
+    "./cli": {
+      "import": "./dist/cli/index.mjs",
+      "require": "./dist/cli/index.js"
     }
+  },
+  "bin": {
+    "tars": "dist/cli/index.js"
   },
   "files": [
     "dist"
@@ -25,9 +32,14 @@
     "@multimodal/agent": "workspace:*",
     "@agent-infra/mcp-server-browser": "workspace:*",
     "@agent-infra/mcp-server-commands": "workspace:*",
-    "@agent-infra/mcp-server-filesystem": "workspace:*"
+    "@agent-infra/mcp-server-filesystem": "workspace:*",
+    "cac": "^6.7.14",
+    "express": "^4.18.2",
+    "http-proxy-middleware": "^2.0.6",
+    "socket.io": "^4.7.2"
   },
   "devDependencies": {
+    "@types/express": "^4.17.21",
     "@types/node": "^20.10.4",
     "typescript": "^5.5.3"
   }
