--- a/packages/multimodal/agent-tars/package.json
+++ b/packages/multimodal/agent-tars/package.json
@@ -40,6 +40,7 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
+    "@rslib/core": "0.5.3",
     "@types/node": "^20.10.4",
     "typescript": "^5.5.3"
   }
