--- a/packages/multimodal/agent-tars/package.json
+++ b/packages/multimodal/agent-tars/package.json
@@ -34,6 +34,8 @@
     "@agent-infra/mcp-server-commands": "workspace:*",
     "@agent-infra/mcp-server-filesystem": "workspace:*",
     "@agent-infra/mcp-server-search": "workspace:*",
+    "@agent-infra/search": "workspace:*",
+    "@agent-infra/browser-search": "workspace:*",
     "@agent-infra/shared": "workspace:*",
     "cac": "^6.7.14",
     "express": "^4.18.2",
